@@ -1,14 +1,17 @@
 Revision history for Perl extension Statistics::R.
 
 x.xx 
-    - Minor script touchups
+    - Replaced "$shift->" by "$this = shift; $this->" everywhere for consistency
+      and readability
+    - Fixed a bug in unlock() method
+    - Minor scripts touchups
     - New option for new(): shared
     - Automatically call start() when creating a Statistics::R object with new()
     - More illustrative synopsis
     - More tests: start/stop
     - Aliased a few functions for consistency:
          startR -> start, stopR -> stop, restartR -> restart, Rbin -> bin,
-         start_sharedR -> start_shared, read -> receive
+         start_sharedR -> start_shared, read -> receive, is_blocked -> is_locked
     - Replaced the error() method by a dummy. Errors are now fatal are die() right away
     - Added a load test
     - Added a run() method that replaces send() and read() and checks for errors (RT #70361)
